--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<meta name="viewport" contetnt="device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Hello Coursera!</h1>
+	<h1>Our Menu</h1>
+<div class="row">
+	<div class="p1"><p>Chicken <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
+	<div class="p2"><p>Beef <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
+	<div class="p3"><p>Sushi <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
+</div>
 
+	
+	
 </body>
 </html>
