My Module 2 Assignment

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
-	<meta charset="utf-8">
-	<meta name="viewport" contetnt="device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Module 2 Coding Assignment - Our Menu</title>
 </head>
 <body>
-	<h1>Our Menu</h1>
-<div class="row">
-	<div class="p1"><p>Chicken <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
-	<div class="p2"><p>Beef <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
-	<div class="p3"><p>Sushi <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis pellentesque lectus, quis consectetur nulla bibendum ac.</p></div>
-</div>
-
-	
-	
+  <h1 class="page-title">Our Menu</h1>
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12 item-container">
+      <div class='item'>
+        <h1>Beef</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar convallis massa sit amet iaculis. Cras in finibus lacus. Aliquam finibus bibendum pellentesque. Integer quam dolor, dictum quis elementum vitae, mattis sit amet nunc. Aenean sit amet maximus lorem. Quisque tempus auctor nisl id consectetur. Praesent porta, ligula a congue congue, risus orci rhoncus sem, et ornare elit nisl vel nulla. Praesent id dui mi. Maecenas lobortis imperdiet elit tincidunt eleifend. Nunc et interdum arcu, venenatis congue massa. Duis porta odio eu felis porttitor, vitae commodo augue aliquam.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 item-container">
+      <div class='item'>
+        <h1>Chicken</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar convallis massa sit amet iaculis. Cras in finibus lacus. Aliquam finibus bibendum pellentesque. Integer quam dolor, dictum quis elementum vitae, mattis sit amet nunc. Aenean sit amet maximus lorem. Quisque tempus auctor nisl id consectetur. Praesent porta, ligula a congue congue, risus orci rhoncus sem, et ornare elit nisl vel nulla. Praesent id dui mi. Maecenas lobortis imperdiet elit tincidunt eleifend. Nunc et interdum arcu, venenatis congue massa. Duis porta odio eu felis porttitor, vitae commodo augue aliquam.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 item-container">
+      <div class='item'>
+        <h1>Salad</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar convallis massa sit amet iaculis. Cras in finibus lacus. Aliquam finibus bibendum pellentesque. Integer quam dolor, dictum quis elementum vitae, mattis sit amet nunc. Aenean sit amet maximus lorem. Quisque tempus auctor nisl id consectetur. Praesent porta, ligula a congue congue, risus orci rhoncus sem, et ornare elit nisl vel nulla. Praesent id dui mi. Maecenas lobortis imperdiet elit tincidunt eleifend. Nunc et interdum arcu, venenatis congue massa. Duis porta odio eu felis porttitor, vitae commodo augue aliquam.
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
