--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Module 2 Coding Assignment - Our Menu</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Module 2 Coding Assignment</title>
 </head>
 <body>
   <h1 class="page-title">Our Menu</h1>
